Prevent overflowing in Chrome on mac

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 @import '~@angular/material/prebuilt-themes/purple-green.css';
 
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
+  height: 100%;
   margin: 0;
+  overflow: auto;
 }
